# docx-formatter-cn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  start_gui.bat  start_gui.sh
.github/workflows/: ci.yml
examples/: README.md  custom_template.json
gui/: app.py
skill/: SKILL.md
skill/scripts/: new_doc.js
src/docx_formatter/: __init__.py  cli.py  config.py  formatter.py
src/docx_formatter/converter/: docx_builder.py  markdown_parser.py  toc.py
src/docx_formatter/formula/: mathml_to_omml.py
tests/: sample.md  test_docx_builder.py  test_extended.md  test_formula.py  test_image_size.md  test_markdown.py  test_toc.md
tests/batch_in/: b.md
