[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-formatter-cn"
version = "0.1.0"
description = "Chinese academic document formatter: Markdown to docx with LaTeX formulas"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "docx-formatter-cn contributors"},
]
keywords = ["docx", "markdown", "chinese", "academic", "latex", "formula", "word"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Word Processing",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "python-docx>=1.1.0",
    "latex2mathml>=3.79.0",
    "lxml>=5.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
docx-formatter = "docx_formatter.cli:main"

[project.urls]
Homepage = "https://github.com/vajhXajhcv/docx-formatter-cn"
Repository = "https://github.com/vajhXajhcv/docx-formatter-cn"

[tool.setuptools.packages.find]
where = ["src"]
